force-app/main/default/objects/ProjectTeam__c/ProjectTeam__c.object-meta.xml
<CustomObject>
    <description>This object will be used to define the rules and derive the project team.</description>
    <label>Project Team Setup</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Project Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Teams Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>