force-app/main/default/objects/ProjectTeam__c/fields/AgencyAccount__c.field-meta.xml
<CustomField>
    <fullName>AgencyAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AgencyAccountTeam</relationshipName>
    <type>Lookup</type>
</CustomField>