force-app/main/default/objects/ProjectTeam__c/fields/AmountOver__c.field-meta.xml
<CustomField>
    <fullName>AmountOver__c</fullName>
    <inlineHelpText>Amount Over ($K)</inlineHelpText>
    <label>Amount Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>