force-app/main/default/objects/ProjectTeam__c/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent Account of the Project&#39;s Account</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ParentAccount</relationshipName>
    <type>Lookup</type>
</CustomField>