force-app/main/default/objects/ProjectTeam__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <inlineHelpText>Type of the Project to consider this rule</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Single Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>