force-app/main/default/objects/ProjectTeam__c/fields/RequestorType__c.field-meta.xml
<CustomField>
    <fullName>RequestorType__c</fullName>
    <inlineHelpText>Type of the Requestor</inlineHelpText>
    <label>Requestor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Non Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>