force-app/main/default/objects/ProjectTeam__c/fields/TeamMember__c.field-meta.xml
<CustomField>
    <fullName>TeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamMember</relationshipName>
    <type>Lookup</type>
</CustomField>