force-app/main/default/objects/ProjectTeam__c/fields/TeamRole__c.field-meta.xml
<CustomField>
    <fullName>TeamRole__c</fullName>
    <inlineHelpText>Role of the Team Member, it will be assigned to the Team Member in Project Team</inlineHelpText>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ferguson Builder Manager</fullName>
            </value>
            <value>
                <fullName>Healthcare Project Manager</fullName>
            </value>
            <value>
                <fullName>Hospitality Project Director</fullName>
            </value>
            <value>
                <fullName>Hospitality Project Manager</fullName>
            </value>
            <value>
                <fullName>Multi-Family Project Manager</fullName>
            </value>
            <value>
                <fullName>National Account Manager</fullName>
            </value>
            <value>
                <fullName>Projects Director</fullName>
            </value>
            <value>
                <fullName>Regional Projects Director</fullName>
            </value>
            <value>
                <fullName>Regional Sales Manager</fullName>
            </value>
            <value>
                <fullName>VP of Channel Sales</fullName>
            </value>
            <value>
                <fullName>Regional Project Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>