force-app/main/default/objects/ProjectTeam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AgencyAccount__c</columns>
    <columns>AmountOver__c</columns>
    <columns>ParentAccount__c</columns>
    <columns>ProjectType__c</columns>
    <columns>Region__c</columns>
    <columns>Requestor__c</columns>
    <columns>RequestorRole__c</columns>
    <columns>RequestorType__c</columns>
    <columns>TeamMember__c</columns>
    <columns>TeamRole__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>