force-app/main/default/objects/ProjectTeam__c/listViews/Southwest.listView-meta.xml
<ListView>
    <fullName>Southwest</fullName>
    <columns>NAME</columns>
    <columns>AgencyAccount__c</columns>
    <columns>AmountOver__c</columns>
    <columns>ParentAccount__c</columns>
    <columns>ProjectType__c</columns>
    <columns>Region__c</columns>
    <columns>Requestor__c</columns>
    <columns>RequestorRole__c</columns>
    <columns>RequestorType__c</columns>
    <columns>TeamMember__c</columns>
    <columns>TeamRole__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Southwest</value>
    </filters>
    <label>Southwest</label>
</ListView>