force-app/main/default/objects/ProjectTeam__c/listViews/Specific_Agency.listView-meta.xml
<ListView>
    <fullName>Specific_Agency</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>AgencyAccount__c</columns>
    <columns>AmountOver__c</columns>
    <columns>ParentAccount__c</columns>
    <columns>ProjectType__c</columns>
    <columns>TeamMember__c</columns>
    <columns>TeamRole__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RequestorType__c</field>
        <operation>equals</operation>
        <value>Agency</value>
    </filters>
    <filters>
        <field>AgencyAccount__c</field>
        <operation>equals</operation>
        <value>Contact Sales</value>
    </filters>
    <label>Specific Agency</label>
</ListView>