force-app/main/default/objects/ProjectTeam__c/listViews/Specific_Region_Generic.listView-meta.xml
<ListView>
    <fullName>Specific_Region_Generic</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>RequestorType__c</columns>
    <columns>Requestor__c</columns>
    <columns>AgencyAccount__c</columns>
    <columns>AmountOver__c</columns>
    <columns>ParentAccount__c</columns>
    <columns>ProjectType__c</columns>
    <columns>TeamMember__c</columns>
    <columns>TeamRole__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RequestorType__c</field>
        <operation>equals</operation>
        <value>Generic</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Northeast</value>
    </filters>
    <label>Specific Region Generic</label>
</ListView>